# SweatFindr

./: .dockerignore  .gitignore  README.md  docker-compose.yml
db-init/auth/: init.sql  seed.sql
db-init/client/: init-mongo.js
db-init/events/: init.sql  populate.sql
doc/: auth-service.md  client-service.md  email-service.md  event-service.md  gateway.md  grafana.md  notification-service.md  rabbitmq.md
docs/: axum.json
grafana/: docker-compose.yaml  prometheus.yml
services/axum/: Cargo.toml
services/backend/: Cargo.toml
services/backend/auth-service/: .env.example  Cargo.toml  Dockerfile  build.rs  docker-compose.yaml
services/backend/auth-service/proto/: auth.proto
services/backend/auth-service/src/: grpc_service.rs  main.rs
services/backend/auth-service/src/models/: user.rs
services/backend/auth-service/src/repository/: user_repository.rs
services/backend/auth-service/src/services/: expiration_listener.rs  mod.rs
services/backend/client-service/: .env.example  Cargo.toml  Dockerfile  build.rs  docker-compose.yaml
services/backend/client-service/proto/: email.proto
services/backend/client-service/src/: lib.rs  main.rs
services/backend/client-service/src/handlers/: auth.rs  client.rs  mod.rs  refund.rs
services/backend/client-service/src/middleware/: auth.rs  mod.rs
services/backend/client-service/src/models/: client.rs  mod.rs  refund.rs
services/backend/client-service/src/repositories/: client_repo.rs  mod.rs
services/backend/client-service/src/services/: mod.rs  refund_consumer.rs
services/backend/client-service/src/services/event_manager/: client.rs  ticket_service.rs
services/backend/client-service/src/utils/: doc.rs  error.rs  links.rs
services/backend/common/: Cargo.toml
services/backend/common/src/: authorization.rs  lib.rs
services/backend/common/src/rabbitmq/: messages.rs  mod.rs
services/backend/common/src/websocket/: messages.rs
services/backend/email-service/: .env.example  Cargo.toml  Dockerfile  build.rs  docker-compose.yaml
services/backend/email-service/proto/: email.proto
services/backend/email-service/src/: grpc_service.rs  main.rs
services/backend/email-service/src/repository/: mod.rs  verification_repository.rs
services/backend/email-service/src/services/: email_service.rs  mod.rs  refund_consumer.rs
services/backend/event-service/: .env.example  Cargo.toml  Dockerfile  docker-compose.yaml
services/backend/event-service/src/: lib.rs  main.rs
services/backend/event-service/src/handlers/: event.rs  event_packets.rs  mod.rs  refund.rs  ticket.rs
services/backend/event-service/src/middleware/: auth.rs  mod.rs
services/backend/event-service/src/models/: event.rs  event_packets.rs  join_pe.rs  mod.rs  refund.rs
services/backend/event-service/src/repositories/: event_packets_repo.rs  event_repo.rs  mod.rs  refund_repo.rs  ticket_repo.rs
services/backend/event-service/src/services/: mod.rs  refund_consumer.rs
services/backend/event-service/src/utils/: doc.rs  error.rs  links.rs
services/backend/gateway/: Cargo.toml  Dockerfile  build.rs  docker-compose.yaml
services/backend/gateway/src/: gateway.rs  main.rs
services/backend/gateway/src/handlers/: auth.rs  email.rs
services/backend/gateway/src/middleware/: auth.rs  rate_limit.rs
services/backend/hateoas-macros/: Cargo.toml
services/backend/hateoas-macros/src/: lib.rs
services/backend/notification-service/: Cargo.toml  Dockerfile  build.rs  docker-compose.yaml
services/backend/notification-service/proto/: auth.proto
services/backend/notification-service/src/: main.rs
services/backend/notification-service/src/middleware/: auth.rs
services/backend/notification-service/src/websocket/: broker.rs  connection_manager.rs  handler.rs  mod.rs
services/frontend/: docker-compose.yaml  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json
services/react/: Dockerfile  docker-compose.yaml  index.html  nginx.conf  package-lock.json  package.json
services/rust/auth-service/: Cargo.toml  Dockerfile  docker-compose.yaml  docker-compose.yml
services/rust/auth-service/proto/: auth.proto
services/rust/auth-service/src/: grpc_service.rs  main.rs
services/rust/auth-service/src/models/: user.rs
services/rust/auth-service/src/repository/: mod.rs  user_repository.rs  verification_repository.rs
services/rust/auth-service/src/services/: blacklist.rs  email_service.rs  jwt_service.rs  mod.rs
services/rust/client-service/: .env.example  Cargo.toml  Dockerfile  docker-compose.yaml  docker-compose.yml
services/rust/client-service/proto/: auth.proto
services/rust/client-service/src/: lib.rs  main.rs
services/rust/client-service/src/handlers/: auth.rs  client.rs  mod.rs
services/rust/client-service/src/middleware/: auth.rs
services/rust/client-service/src/models/: auth.rs  client.rs
services/rust/client-service/src/repositories/: client_repo.rs
services/rust/client-service/src/services/: auth_service.rs  mod.rs
services/rust/client-service/src/services/event_manager/: client.rs  event_service_client.rs  mod.rs  packet_service.rs  ticket_service.rs  types.rs
services/rust/client-service/src/utils/: auth_links.rs  doc.rs  error.rs  links.rs  mod.rs
services/rust/event-service/: .env.example  Cargo.toml  Dockerfile  docker-compose.yaml  docker-compose.yml
services/rust/event-service/proto/: auth.proto
services/rust/event-service/src/: lib.rs  main.rs
services/rust/event-service/src/handlers/: event.rs  event_packets.rs  join_pe.rs  mod.rs  ticket.rs
services/rust/event-service/src/models/: event.rs  event_packets.rs  ticket.rs
services/rust/event-service/src/repositories/: event_packets_repo.rs  event_repo.rs  ticket_repo.rs
services/rust/event-service/src/utils/: error.rs  links.rs
services/rust/gateway/: Cargo.toml  Dockerfile  build.rs  docker-compose.yaml
services/rust/gateway/src/: main.rs
services/rust/gateway/src/handlers/: auth.rs  email.rs
services/rust/gateway/src/middleware/: auth.rs  rate_limit.rs
services/rust/gateway/src/models/: auth.rs  email.rs
(+121 files in other folders)
