[workspace]
resolver = "3"
members = [
    "client-service",
    "common",
    "event-service",
    "auth-service",
    "email-service",
    "hateoas-macros",
    "gateway",
    "notification-service",
]

[workspace.dependencies]
axum = "0.8.6"
axum-prometheus = "0.8.0"
tower = "0.5.2"
tower-http = "0.6.6"
tonic = "0.12.3"
prost = "0.13"
prost-types = "0.13"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
uuid = { version = "1.19.0", features = ["v4", "v7", "serde"] }
validator = "0.20.0"
reqwest = { version = "0.12", features = ["json"] }
utoipa = { version = "5.4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum", "reqwest"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "uuid",
] }
mongodb = { version = "3.3.0", default-features = false, features = [
    "compat-3-0-0",
    "rustls-tls",
    "dns-resolver",
] }
lapin = "2.5.5"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 256
opt-level = 3
panic = "abort"
strip = "symbols"
