[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
prost = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true }

bcrypt = "0.15"
email_address = "0.2"
futures-util = "0.3"
jsonwebtoken = "9.0"
tld = "2.14"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tonic_prometheus_layer = "0.1"

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "auth-service"
path = "src/main.rs"
