[package]
name = "client-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-prometheus = { workspace = true }
futures = { workspace = true }
lapin = { workspace = true }
mongodb = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tower-http = { workspace = true, features = ["catch-panic", "trace", "cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true, features = ["derive"] }

common = { path = "../common" }
hateoas-macros = { path = "../hateoas-macros" }

bson = { version = "2.13", features = ["serde_with"] }

[build-dependencies]
tonic-build = "0.12"
