[package]
name = "email-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.100"
dotenvy = "0.15"
lettre = { version = "0.11", features = [
    "tokio1",
    "tokio1-native-tls",
    "builder",
] }
rand = "0.8"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
maud = { version = "0.27.0", features = ["axum"] }
chrono = "0.4"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lapin = "2.5"
futures = "0.3"
common = { path = "../common" }
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "email-service"
path = "src/main.rs"
