[package]
name = "email-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
lapin = { workspace = true }
prost = { workspace = true }
redis = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

common = { path = "../common" }

lettre = { version = "0.11", features = [
    "tokio1",
    "tokio1-native-tls",
    "builder",
] }
maud = { version = "0.27.0", features = ["axum"] }
rand = "0.8"
tonic_prometheus_layer = "0.1"

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "email-service"
path = "src/main.rs"
