[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-prometheus = { workspace = true }
dotenvy = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tower-http = { workspace = true, features = ["catch-panic", "trace", "cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

governor = "0.10"
tower_governor = "0.8"

[build-dependencies]
tonic-build = "0.12"
