[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.0"
uuid = { version = "1.0", features = ["v4", "v7", "serde"] }
chrono = "0.4"
bcrypt = "0.15"
dotenvy = "0.15"
anyhow = "1.0.100"

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "auth-service"
path = "src/main.rs"
