[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.0"
uuid = { version = "1.0", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
dotenvy = "0.15"
anyhow = "1.0.100"
validator = { version = "0.18", features = ["derive"] }
email_address = "0.2"
tld = "2.14"
tracing = "0.1"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12", features = ["json"] }

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "auth-service"
path = "src/main.rs"
