[package]
name = "event-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8"
common = { path = "../common" }
hateoas-macros = { path = "../hateoas-macros" }
prost = "0.13"
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.15"
sqlx = { version = "0.8", features = [
  "postgres",
  "runtime-tokio",
  "macros",
  "time",
  "tls-native-tls",
] }
tokio = { version = "1.48", features = ["full"] }
tonic = "0.12"
tower = "0.5"
tower-http = { version = "0.6", features = ["catch-panic", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5.4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum", "reqwest"] }
uuid = { version = "1.18.1", features = ["serde", "v7"] }
validator = { version = "0.20.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12"
