[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8"
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
tonic = "0.12"
tower = "0.5"
tower-http = { version = "0.6", features = ["catch-panic", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
validator = { version = "0.20.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12"
